<resources>
    <string name="app_name">9c-MyShoppingApp</string>
    <string name="action_settings">Settings</string>
    <string name="action_about">About the Application</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="Login">Start Shopping</string>

    <string name="recentActivity">Your recent Activity</string>
    <string name="title_activity_shop">ShopActivity</string>
    <string name="buy">I want to buy...</string>
    <string name="quanitity">Enter Quantity</string>
    <string name="phone">Android Phones</string>
    <string name="welcome">Welcome</string>
    <string name="Logout">Log out</string>
    <string name="title_activity_about">AboutActivity</string>

</resources>
