<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_shop"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical"
    tools:context="com.nyp.sit.dit.it2107.myshoppingapp.ShopActivity">
    <TextView
        android:id="@+id/welcomeTV"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/welcome"
        android:gravity="center"
        android:textAppearance="?android:attr/textAppearanceLarge"/>
    <TextView
        android:id="@+id/textView1"
        android:layout_marginTop="10dp"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/buy"
        android:gravity="center"/>
    <EditText
        android:id="@+id/quanET"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="number"
        android:hint="@string/quanitity">
        <requestFocus/>
    </EditText>
    <TextView
        android:id="@+id/textView2"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/phone"
        android:gravity="center"
        android:layout_marginBottom="10dp"/>
    <Button
        android:id="@+id/LogoutBT"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Logout"
        android:layout_gravity="center"/>


</LinearLayout>
